--- a/src/tool_asset_system/web/templates/base.html
+++ b/src/tool_asset_system/web/templates/base.html
@@ -17,6 +17,8 @@
         <a href="{{ url_for('parts.parts_list') }}">Parts</a>
         <a href="{{ url_for('parts.parts_new') }}">New</a>
         <a href="{{ url_for('parts.parts_archived') }}">Archived</a>
+        <a href="{{ url_for('assemblies.assemblies_list') }}">Assemblies</a>
+        <a href="{{ url_for('assemblies.assemblies_new') }}">New Assembly</a>
       </nav>
     </header>
 
