--- a/src/tool_asset_system/web/templates/base.html
+++ b/src/tool_asset_system/web/templates/base.html
@@ -24,6 +24,19 @@
 
     <main class="app-main">
 
+
+      {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      <div class="flash-messages">
+        {% for category, msg in messages %}
+        <div class="{{ 'flash-error' if category=='err' else 'flash-ok' }}">
+          {{ msg }}
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      {% endwith %}
+
       {% block content %}{% endblock %}
     </main>
   </div>
